# spotify_app

./: .env.template  .gitignore  alembic.ini  main.py  notes  pyproject.toml
alembic/: env.py
alembic/versions/: 6dc3b0fa54c4_add_relationship.py  f4c26f53a682_initial_setup.py
spotify_app/: get_data.py
spotify_app/dags/: spotify_dag.py
spotify_app/etl/: spotify_etl.py
spotify_app/models/: __init__.py  tracks.py  user.py
tests/: test_spotify_app.py
